split final exp in 2